HW6 - исправления после проверки