@@ -3,6 +3,7 @@ package com.urise.webapp.storage;
 import com.urise.webapp.exception.StorageException;
 import com.urise.webapp.model.Resume;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -41,14 +42,9 @@ public abstract class AbstractArrayStorage extends AbstractStorage {
         storage[(Integer) index] = r;
     }
 
-    /**
-     * @return array, contains only Resumes in storage (without null)
-     */
     @Override
-    public List<Resume> getAllSorted() {
-        Resume[] sortedStorage = Arrays.copyOf(storage, size);
-        Arrays.sort(sortedStorage, COMPARE_FULL_NAME);
-        return Arrays.asList(sortedStorage);
+    protected List<Resume> getStorageAsList() {
+        return new ArrayList<>(List.of(Arrays.copyOf((storage), size)));
     }
 
     public final int size() {
